Updated templates/ and started server.py -- Homepage up and able to run on local server

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" >
     <meta name="viewport" content="width=device-width">
     <title>
       {% block title %}Recipe App{% endblock %}
@@ -13,5 +13,9 @@
     {% block body %}{% endblock %}
 
     {% block after_body %}{% endblock %}
+
+      <footer>
+        (Tagline for Recipe App in Footer)
+      </footer>
   </body>
 </html>
