--- a/templates/build_recipe.html
+++ b/templates/build_recipe.html
@@ -1,6 +1,17 @@
 {% extends 'base.html' %}
-{% block title %}Build Recipe{% endblock %}
+{% block title %}Recipe App - Build Recipe{% endblock %}
 
 {% block body %}
   <h1>Build a new recipe!</h1>
 {% endblock %}
+
+<!-- Have:   1) working title of app 
+        2) back to user profile button in upper right
+        3) form: user selects specification to convert recipe by (gluten-free)
+        4) input: user add recipe name
+        5) user- add info re: ingredients
+        6) user- add info re: prep/cook time and servings
+        7) user- add info re: instructions
+        8) space for stock image
+        9) button: to cancel and return to user profile Page
+        10) button: to get recipe conversion -->
