--- a/templates/create_new_account.html
+++ b/templates/create_new_account.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
-{% block title %}Create New Account{% endblock %}
+{% block title %}Recipe App - Create New Account{% endblock %}
 
 {% block body %}
   <h1>Create new user account page</h1>
 {% endblock %}
+
+<!-- have 1) working title of app as header
+          2) title box: create new account
+          3) form: input for email, password and submit button
+          4) footer should be inherited  -->
