--- a/templates/display_recipe.html
+++ b/templates/display_recipe.html
@@ -1,6 +1,20 @@
 {% extends 'base.html' %}
-{% block title %}Display Recipe{% endblock %}
+{% block title %}Recipe App - Display Recipe{% endblock %}
 
 {% block body %}
   <h1>Display recipe to user</h1>
 {% endblock %}
+
+<!-- Have:    1) working title of app 
+              2) back to user profile button in upper right
+
+       Use AJAX to update page:     
+              3) where form was: specification you wanted added!
+              4) recipe name user added
+              5) ingredients user added BUT WITH gluten-free substitution
+              6) prep/cook time and servings info user added
+              7) instructions info user added
+
+              8) space for stock image the same
+              9) button: to save recipe to account
+              10) button: to go back to user profile page -->
