--- a/templates/user_logged_out.html
+++ b/templates/user_logged_out.html
@@ -4,3 +4,7 @@
 {% block body %}
   <h1>User successfully logged out</h1>
 {% endblock %}
+
+<!-- Have:  1) working title of webpage in header
+            2) Pop-up message: you have successfully logged out
+            3) Button: take me back to the homepage -->
