--- a/templates/user_profile_page.html
+++ b/templates/user_profile_page.html
@@ -1,6 +1,15 @@
 {% extends 'base.html' %}
-{% block title %}User Profile Page{% endblock %}
+{% block title %}Recipe App - User Profile Page{% endblock %}
 
 {% block body %}
   <h1>User Profile Page</h1>
 {% endblock %}
+
+<!-- have:  1) working title of app in header
+            2) log out button -- top right
+            3) title: User Profile Page
+            4) title box: all of user's saved recipes
+            5) linked list: recipe names user created (links to recipes)
+            6) button to build/ convert a recipe -->
+
+
