--- a/templates/base.html
+++ b/templates/base.html
@@ -2,13 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" >
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
       {% block title %}Recipe App{% endblock %}
     </title>
-
+    <link rel="stylesheet" 
+          href="/static/styles.css">
     {% block head %}{% endblock %}
   </head>
+
   <body>
     {% block body %}{% endblock %}
 
