--- a/templates/display_recipe.html
+++ b/templates/display_recipe.html
@@ -3,6 +3,46 @@
 
 {% block body %}
   <h1>Display recipe to user</h1>
+
+  <form action="/display_recipe">
+    <label> Recipe is now (gluten-free) </label>    <!-- Need to link to user's selection from radio button on form-->
+    <br><br><br>
+
+    <label for="recipe-name">Recipe Name:</label>
+    <input type="text" name="recipe_name" id="recipe-name"/>   <!-- Should this be the same as recipe_name in model.py? -->
+    <br><br>
+    
+    <label for="num_servings">Number of Servings:</label>
+    <input type="text" name="num_servings" id="num_servings">
+    <br><br>
+    
+    <label for="prep_time">Prep Time in Minutes:</label>
+    <input type="text" name="prep_time" id="prep_time">
+    <br><br>
+    
+    <label for="cook_time">Cook Time in Minutes:</label>
+    <input type="text" name="cook_time" id="cook_time">
+    <br><br>
+
+    <label for="ingred_1">Ingredient 1:</label>
+    <input type="text" name="ingred_1" id="ingred_1">       <!-- Add ingredient type WITH it's prep details!-->
+    <br><br>
+
+    <label for="ingred_2"> Ingredient 2:</label>            
+    <input type="text" name="ingred_2" id="ingred_2">
+    <br><br>
+
+    <label for="recipe_instructions">Recipe Instructions:</label>
+    <input type="text" name="recipe_instructions" id="recipe_instructions">
+    <br><br>
+
+  <button type="submit">Save This Recipe to My Recipe Box</button>
+</form>
+
+<br><br>
+  <p>
+    Note: The only things that are changing are the ingredients-- they should be substituted
+  </p>
 {% endblock %}
 
 <!-- Have:    1) working title of app 
