--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -4,14 +4,17 @@
 {% block body %}
   <h1>Welcome!  (Add working title of app)</h1>
 
-  <h3>(Add tagline to add underneath working title)</h3>
+  <h3>(Add tagline underneath working title)</h3>
 
   <h2>See What This App Does</h2>
   <ul>
-    <li><a href="/_______">See How App Works</a></li>
-    <li><a href="/_______">See Some Examples</a></li>
-    <li><a href="/_______">See Reviews of This App</a></li>
+    <li><a href="/_______">How App Works</a></li>
+    <li><a href="/_______">Some Examples</a></li>
+    <li><a href="/_______">Reviews of This App</a></li>
   </ul>
+  <br>
+  <br>
+  <br>
 
   <!-- add buttons to submit Create Account info and Submit Log In info -->
   <h2>New Users: Create an Account</h2>
@@ -29,4 +32,7 @@
 
         <button type="submit">Log In</button>
       </form>
+  <br>
+  <br>
+  <br>
 {% endblock %}
