--- a/templates/user_logged_out.html
+++ b/templates/user_logged_out.html
@@ -2,7 +2,14 @@
 {% block title %}Logged Out{% endblock %}
 
 {% block body %}
-  <h1>User successfully logged out</h1>
+  <h3>(Working title of app)</h3>  
+
+  <h1>You have successfully logged out</h1>
+
+  <a href="/" class="button-back-to-homepage">Take me back to the Homepage</a>
+
+  <br>
+  <br>
 {% endblock %}
 
 <!-- Have:  1) working title of webpage in header
