--- a/templates/create_new_account.html
+++ b/templates/create_new_account.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
-{% block title %}Recipe App - Create New Account{% endblock %}
+{% block title %}Share My Recipe App - Create New Account{% endblock %}
 
 {% block body %}
-  <h3> Add working title of app here </h3>
+  <h3> Share My Recipe App </h3>
   <br>
 
-  <h1>Create new user account</h1>
+  <h1>Create New User Account</h1>
     <form action="/user_profile_page">
 
         <label for="username-input">Username:</label>
