--- a/templates/display_recipe.html
+++ b/templates/display_recipe.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
-{% block title %}Recipe App - Display Recipe{% endblock %}
+{% block title %}Share My Recipe App - Display Recipe{% endblock %}
 
 {% block body %}
-  <h1>Display recipe to user</h1>
+  <h1>Display Recipe to User</h1>
 
   <form action="/user_profile_page">
     <label> (Tell user that Recipe is now (gluten-free))</label>    <!-- Need to link to user's selection from radio button on form-->
