--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,18 +1,20 @@
 {% extends 'base.html' %}
-{% block title %}Recipe App Homepage{% endblock %}
+{% block title %}Share My Recipe App Homepage{% endblock %}
 
 {% block body %}
-  <h1>Welcome!  (Add working title of app)</h1>
+  <h1>Share My Recipe App</h1>
 
-  <h3>(Add tagline underneath working title)</h3>
+  <h3>Have Family Baking Recipes you want to share, but need to make them for others according to their dietary specification?<br>
+    Gluten-Free Cakes- Cupcakes- Quick Breads? Enter In Your Recipe and Get Back a Gluten-Free Version</h3>
+    <br>
+    <br>
 
-  <h2>See What This App Does</h2>
+  <h3>See What This App Does</h3>
   <ul>
     <li><a href="/_______">How App Works</a></li>
     <li><a href="/_______">Some Examples</a></li>
     <li><a href="/_______">Reviews of This App</a></li>
   </ul>
-  <br>
   <br>
   <br>
 
