--- a/templates/user_profile_page.html
+++ b/templates/user_profile_page.html
@@ -1,16 +1,16 @@
 {% extends 'base.html' %}
-{% block title %}Recipe App - User Profile Page{% endblock %}
+{% block title %}Share My Recipe App - User Profile Page{% endblock %}
 
 {% block body %}
-  <h3>(Working title of Recipe App)</h3>
+  <h3>Share My Recipe App</h3>
 
   <h1> (Username's) Profile Page</h1>
 
   <h2>(Username's) Recipe Box</h2>
   <ol>
-    <li><a href="/_______">Recipe 1 User created</a></li>
-    <li><a href="/_______">Recipe 2 User created</a></li>
-    <li><a href="/_______">Recipe 3 User created</a></li>
+    <li><a href="/_______">Recipe 1 User Created</a></li>
+    <li><a href="/_______">Recipe 2 User Created</a></li>
+    <li><a href="/_______">Recipe 3 User Created</a></li>
   </ol>
   <br>
   <br>
