--- a/templates/user_logged_out.html
+++ b/templates/user_logged_out.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
-{% block title %}Logged Out{% endblock %}
+{% block title %}Share My Recipe App - Logged Out{% endblock %}
 
 {% block body %}
-  <h3>(Working title of app)</h3>  
+  <h3>Share My Recipe App</h3>  
 
   <h1>You have successfully logged out</h1>
 
