--- a/templates/build_recipe.html
+++ b/templates/build_recipe.html
@@ -37,6 +37,7 @@
     <input type="text" name="cook_time_in_min" id="cook_time_in_min">
     <br><br><br><br>
     
+    <!--
     <h3>Now, let's add some ingredients from your recipe.  We'll need some specific information:</h3>
    
     <label for="non_gf_flour">In your 'Regular Recipe', what type of NON-Gluten-Free flour is used?</label><br>
@@ -55,27 +56,27 @@
       <option value="1 teaspoon">1 teaspoon</option>
       <option value="1/2 Tablesppon">1/2 Tablespoon</option>
       <option value="1 Tablespoon">1 Tablespoon</option>
-      <!-- Find a way for user to increment/ multiply the option they choose: (example for 1 teaspoon, they can multiply by 3 -- 3 tsp.)-->
+      Find a way for user to increment/ multiply the option they choose: (example for 1 teaspoon, they can multiply by 3 -- 3 tsp.)-->
       <!-- Will also want a checkbox?  So they can have 1 1/2 teaspoons-->
-      <option value="1/4 cup">1/4 cup</option>
+      <!--<option value="1/4 cup">1/4 cup</option>
       <option value="1/3 cup">1/3 cup</option>
       <option value="1/2 cup">1/2 cup</option>
       <option value="2/3 cup">2/3 cup</option>
       <option value="1 cup">1 cup</option>
-      <!-- Find a way for user to increment/ multiply the option they choose: (example for 1 cup, they can multiply by 3 -- 3 cups.)-->
+      Find a way for user to increment/ multiply the option they choose: (example for 1 cup, they can multiply by 3 -- 3 cups.)-->
       <!-- Will also want a checkbox?  So they can have 1 1/2 cups-->
-      </select>
-    <br><br>
+      <!--</select>
+    <br><br> -->
   
-    <label for="non_gf_flour_prep">Are there any details on how that NON-Gluten-Free flour should be prepped (i.e. sifted etc.)?</label>    
+    <!-- <label for="non_gf_flour_prep">Are there any details on how that NON-Gluten-Free flour should be prepped (i.e. sifted etc.)?</label>    
     <input type="text" name="non_gf_flour_prep" id="non_gf_flour_prep">
     <br><br><br>
   
 
     <h3>Now we need to get info for all liquid ingredients you will be using to make the batter.</h3>
     <label for="liquid_ingred">Select the liquid ingredients used.</label>
-    <!-- Will need to make this checkbox-- might have multiple options-->
-      <select name="liquid_ingred">
+    Will need to make this checkbox-- might have multiple options-->
+      <!-- <select name="liquid_ingred">
         <option value="water">water</option>
         <option value="vegetable oil">vegetable oil</option>
         <option value="whole milk">milk</option>
@@ -84,9 +85,9 @@
         <option value="melted unsalted butter">melted unsalted butter</option>
         <option value="melted vegetable shortening">melted vegetable shortening</option>
       </select>
-  <br><br>
+  <br><br> -->
 
-    <label for="liquid_measure">What's the measurement for that liquid?</label><br>
+    <!--<label for="liquid_measure">What's the measurement for that liquid?</label><br>
     <select name="liquid_measure">
       <option value="1/8 teaspoon">1/8 teaspoon</option>
       <option value="1/4 teaspoon">1/4 teaspoon</option>
@@ -94,23 +95,23 @@
       <option value="1 teaspoon">1 teaspoon</option>
       <option value="1/2 Tablesppon">1/2 Tablespoon</option>
       <option value="1 Tablespoon">1 Tablespoon</option>
-      <!-- Find a way for user to increment/ multiply the option they choose: (example for 1 teaspoon, they can multiply by 3 -- 3 tsp.)-->
+      Find a way for user to increment/ multiply the option they choose: (example for 1 teaspoon, they can multiply by 3 -- 3 tsp.)-->
       <!-- Will also want a checkbox?  So they can have 1 1/2 teaspoons-->
-      <option value="1/4 cup">1/4 cup</option>
+      <!--<option value="1/4 cup">1/4 cup</option>
       <option value="1/3 cup">1/3 cup</option>
       <option value="1/2 cup">1/2 cup</option>
       <option value="2/3 cup">2/3 cup</option>
       <option value="1 cup">1 cup</option>
-      <!-- Find a way for user to increment/ multiply the option they choose: (example for 1 cup, they can multiply by 3 -- 3 cups.)-->
+      Find a way for user to increment/ multiply the option they choose: (example for 1 cup, they can multiply by 3 -- 3 cups.)-->
       <!-- Will also want a checkbox?  So they can have 1 1/2 cups-->
-    </select>
-  <br><br>
+    <!--</select>
+  <br><br> -->
 
-    <label for="liquid_prep">How should that liquid should be prepped (i.e. room temp, chilled, heated etc.)?</label>    
+    <!-- <label for="liquid_prep">How should that liquid should be prepped (i.e. room temp, chilled, heated etc.)?</label>    
       <input type="text" name="liquid_prep" id="liquid_prep">
-    <br><br><br>
+    <br><br><br> -->
     
-    <h3>Next, let's get the number of eggs used from your Regular Recipe.</h3>
+    <!-- <h3>Next, let's get the number of eggs used from your Regular Recipe.</h3>
     <label for="num_eggs_whole">If using whole eggs, enter the total number of whole eggs:</label><br>
     <select name="num_eggs_whole">
       <option value="0">0</option>
@@ -127,9 +128,9 @@
       <option value="11">11</option>
       <option value="12">12</option>
     </select>
-    <br><br>
+    <br><br> -->
 
-    <label for="num_egg_yolks">If using egg yolks, enter the total number of egg whites:</label><br>
+    <!-- <label for="num_egg_yolks">If using egg yolks, enter the total number of egg whites:</label><br>
     <select name="num_egg_yolks">
       <option value="0">0</option>
       <option value="1">1</option>
@@ -145,9 +146,9 @@
       <option value="11">11</option>
       <option value="12">12</option>
     </select>
-    <br><br>
+    <br><br> -->
 
-    <label for="num_egg_whites">If using egg yolks, enter the total number of egg yolks:</label><br>
+    <!--<label for="num_egg_whites">If using egg yolks, enter the total number of egg yolks:</label><br>
     <select name="num_egg_whites">
       <option value="0">0</option>
       <option value="1">1</option>
@@ -163,22 +164,66 @@
       <option value="11">11</option>
       <option value="12">12</option>
     </select>
-    <br><br>
+    <br><br> -->
 
-    <label for="egg_prep">How should the eggs be prepped (i.e. room temp, chilled, whisked etc.)?</label>    
+    <!--<label for="egg_prep">How should the eggs be prepped (i.e. room temp, chilled, whisked etc.)?</label>    
       <input type="text" name="egg_prep" id="egg_prep">
-      <br><br><br><br>
+      <br><br><br><br> -->
 
     <h3>Now add the rest of your ingredients from your regular recipe, one at a time:</h3>
-      <label for="ingred_1">Enter the name of the ingredient:</label>
-      <input type="text" name="ingred_1">
+      <label for="ingred_1">Select the type of one ingredient:</label>
+      <select name="ingred_1">
+        <option value="all purpose flour">all purpose flour</option>
+        <option value="egg, whole">egg, whole</option>
+        <option value="egg white">egg white</option>
+        <option value="egg yolk">egg yolk</option>
+        <option value="water">water</option>
+        <option value="vegetable oil">vegetable oil</option>
+      </select>
+      
       <br><br>
 
-      <label for="ingred_1_M">Enter the Measurement for that ingredient:</label>
-      <input type="text" name="ingred_1_M">
+      <h3>Enter Measurement Info for that one ingredient:</h3>
+      <br>
+      <label for="ingred_1_M">Whole Number</label>
+      <select name="ingred_1_M">Whole Number:>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+        <option value="6">6</option>
+        <option value="7">7</option>
+        <option value="8">8</option>
+        <option value="9">9</option>
+        <option value="10">10</option>
+        <option value="11">11</option>
+        <option value="12">12</option>
+      </select>
+      <br>
+      <label for="ingred_1_M">Fraction</label>
+      <select name="ingred_1_M">
+        <option value="No Fractions Used">No Fractions Used</option>
+        <option value="1/8">1/8</option>
+        <option value="1/4">1/4</option>
+        <option value="1/3">1/3</option>
+        <option value="1/2">1/2</option>
+        <optoin value="2/3">2/3</optoin>
+        <option value="3/4">3/4</option>
+      </select>
+      <br>
+      <label for="ingred_1_M">Measurement Type</label>
+      <select name="ingred_1_M">
+        <option value="teaspoon">teaspoon</option>
+        <option value="Tablespoon">Tablespoon</option>
+        <option value="ounces, dry measurement">ounces, dry masurement</option>
+        <option value="ounces, fluid measurement">ounces, fluid measurement</option>
+        <option value="cup, dry measurement">cup, dry measurement</option>
+        <option value="cup, liquid mesurement">cup, liquid measurement</option>
+      </select>
       <br><br>
 
-      <label for="ingred_1_details">Enter any prep details for the ingredient:</label>
+      <label for="ingred_1_details">Enter any prep details for the ingredient (i.e. room temp, chilled, etc.):</label>
       <input type="text" name="ingred_1_details">
       <br><br>
       <!-- Can let user add up to 10 more ingredients like this -->
